--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "firebase": "^9.0.0",
     "rxfire": "^6.0.1",
     "rxjs": "~7.5.1",
+    "sweetalert2": "^11.7.3",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
   },
