--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser": "^15.2.1",
     "@angular/platform-browser-dynamic": "^15.2.1",
     "@angular/router": "^15.2.1",
+    "@ngrx/store": "^15.3.0",
+    "@ngrx/store-devtools": "^15.3.0",
     "firebase": "^9.0.0",
     "rxfire": "^6.0.1",
     "rxjs": "~7.5.1",
